# glusterfs-coreutils

./: .gitignore  .gitmodules  Makefile.am  README.md  TODO  autogen.sh  bootstrap.sh  configure.ac  glusterfs-coreutils.spec.in  run-tests.sh
lib/: .gitignore
m4/: .gitignore  gnulib-cache.m4
man/: Makefile.am  common_seealso.h2m
src/: Makefile.am  glfs-cat.c  glfs-cat.h  glfs-chmod.c  glfs-chmod.h  glfs-clear.c  glfs-clear.h  glfs-cli-commands.c  glfs-cli-commands.h  glfs-cli.c  glfs-cli.h  glfs-cp.c  glfs-cp.h  glfs-flock.c  glfs-flock.h  glfs-head.c  glfs-head.h  glfs-ls.c  glfs-ls.h  glfs-mkdir.c  glfs-mkdir.h  glfs-mv.c  glfs-mv.h  glfs-put.c  glfs-rm.c  glfs-rm.h  glfs-rmdir.c  glfs-rmdir.h  glfs-stat-util.c  glfs-stat-util.h  glfs-stat.c  glfs-stat.h  glfs-tail.c  glfs-tail.h  glfs-touch.c  glfs-touch.h  glfs-truncate.c  glfs-truncate.h  glfs-util.c  glfs-util.h  (+2 more)
tests/: cat.t  cli.t  cp.t  flock.t  ls.t  mkdir.t  put.t  rm.t  stat.t  tail.t
tests/util/: log.rc  valgrind.suppressions
